[workspace]
resolver = "3"
members = ["fisher", "fisher-playback", "marten", "rapier"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
marten = { path = "marten" }
fisher = { path = "fisher" }
sable_rapier = { path = "rapier" }

log = "0.4.22"
jni = "0.21.1"
colored = "2.1.0"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"


[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
